<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:background="@color/background_gray" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="0sp"
            android:layout_height="@dimen/poster_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/poster"
            android:contentDescription="@string/poster_name_wrath_of_man"
            app:shapeAppearanceOverlay="@style/roundedImage" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginTop="@dimen/card_marginTop"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="@dimen/card_corner_radius" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="58sp"
            android:layout_height="17sp"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@id/cardView"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_32"
            android:elevation="@dimen/elevation_default"
            android:contentDescription="@string/shape_rectangle_border_name"
            app:srcCompat="@drawable/rectangle_rounded_border" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/imageView2"
            app:layout_constraintTop_toTopOf="@id/imageView2"
            android:layout_marginStart="9sp"
            android:layout_marginTop="1sp"
            android:elevation="@dimen/elevation_default"
            android:text="@string/genre_action_movie"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imageView2"
            app:layout_constraintTop_toTopOf="@id/cardView"
            android:layout_marginStart="14sp"
            android:layout_marginTop="@dimen/margin_32"
            android:elevation="@dimen/elevation_default"
            android:text="@string/launch_date_wrath_of_man"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@id/cardView"
            android:layout_marginStart="@dimen/margin_22"
            android:layout_marginTop="63sp"
            android:elevation="@dimen/elevation_default"
            android:text="@string/movie_name_wrath_of_man"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@id/cardView"
            android:layout_marginTop="42sp"
            android:layout_marginEnd="@dimen/margin_20"
            android:elevation="@dimen/elevation_default"
            android:contentDescription="@string/circle_border_name"
            app:srcCompat="@drawable/circle_border" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/imageView3"
            app:layout_constraintTop_toTopOf="@id/imageView3"
            android:layout_marginTop="12sp"
            android:layout_marginStart="10sp"
            android:elevation="@dimen/elevation_default"
            android:text="@string/age_restriction_18"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            android:layout_marginTop="8sp"
            android:elevation="@dimen/elevation_default"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="8sp"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            android:elevation="@dimen/elevation_default"
            android:text="@string/description_wrath_of_man"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            android:elevation="@dimen/elevation_default"
            android:layout_marginStart="@dimen/margin_22"
            android:layout_marginTop="35sp"
            android:text="@string/title_actors"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="16sp"
            android:elevation="@dimen/elevation_default"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="@dimen/actor_portrait_width"
                    android:layout_height="@dimen/actor_portrait_height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/actor_jason_statham"
                    android:contentDescription="@string/actor_portrait_jason_statham" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/actor_name_margin_top"
                    android:text="@string/actor_name_jason_statham"
                    android:textColor="@color/black"
                    android:textSize="@dimen/actor_name_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/imageView10"
                    app:layout_constraintTop_toBottomOf="@id/imageView10" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="@dimen/actor_portrait_width"
                    android:layout_height="@dimen/actor_portrait_height"
                    android:layout_marginStart="@dimen/actor_portrait_distance"
                    app:layout_constraintStart_toEndOf="@id/imageView10"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/actor_holt_mccallany"
                    android:contentDescription="@string/actor_portrait_holt_mccallany" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/actor_name_margin_top"
                    android:text="@string/actor_name_holt_mccallany"
                    android:textColor="@color/black"
                    android:textSize="@dimen/actor_name_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/imageView11"
                    app:layout_constraintTop_toBottomOf="@id/imageView11" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView12"
                    android:layout_width="@dimen/actor_portrait_width"
                    android:layout_height="@dimen/actor_portrait_height"
                    android:layout_marginStart="@dimen/actor_portrait_distance"
                    app:layout_constraintStart_toEndOf="@id/imageView11"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/actor_josh_hartnett"
                    app:shapeAppearanceOverlay="@style/roundedActorImage"
                    android:background="@color/cardview_light_background"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/actor_name_margin_top"
                    android:text="@string/actor_name_josh_hartnett"
                    android:textColor="@color/black"
                    android:textSize="@dimen/actor_name_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/imageView12"
                    app:layout_constraintTop_toBottomOf="@id/imageView12" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/bottom_nav_menu"
            app:itemIconTint="@color/black"
            app:itemBackground="@color/transparent" />

        <ImageView
            android:layout_width="197sp"
            android:layout_height="2sp"
            android:contentDescription="@string/underline"
            android:elevation="@dimen/elevation_underline"
            app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>