<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/movieDetailsRoot"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ScrollView
		android:id="@+id/svMovieDetails"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/background_gray"
		android:scrollbars="none"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/ivMovieDetailsPoster"
				android:layout_width="match_parent"
				android:layout_height="@dimen/poster_height"
				android:contentDescription="@string/poster_name"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:srcCompat="@mipmap/poster" />

			<androidx.cardview.widget.CardView
				android:id="@+id/cvMovieDetailsCard"
				android:layout_width="match_parent"
				android:layout_height="@dimen/card_height"
				android:layout_marginTop="@dimen/card_marginTop"
				app:cardBackgroundColor="@color/light_gray"
				app:cardCornerRadius="@dimen/card_corner_radius"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tvMovieDetailsGenre"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginTop="@dimen/margin_30"
				android:background="@drawable/rectangle_rounded_border"
				android:elevation="@dimen/elevation_default"
				android:gravity="center"
				android:paddingStart="@dimen/item_genre_horizontal_padding"
				android:paddingTop="@dimen/item_genre_vertical_padding"
				android:paddingEnd="@dimen/item_genre_horizontal_padding"
				android:paddingBottom="@dimen/item_genre_vertical_padding"
				android:text="@string/genre_action_movie"
				android:textColor="@color/black"
				android:textSize="@dimen/text_size_10"
				android:textStyle="normal"
				app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
				app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard" />

			<TextView
				android:id="@+id/tvMovieDetailsReleaseDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="14dp"
				android:layout_marginTop="32dp"
				android:elevation="@dimen/elevation_default"
				android:gravity="center_vertical"
				android:text="@string/launch_date_wrath_of_man"
				android:textColor="@color/black"
				android:textSize="@dimen/text_size_12"
				app:layout_constraintStart_toEndOf="@id/tvMovieDetailsGenre"
				app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard" />

			<TextView
				android:id="@+id/tvMovieDetailsName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginTop="@dimen/margin_60"
				android:elevation="@dimen/elevation_default"
				android:text="@string/movie_name_wrath_of_man"
				android:textColor="@color/black"
				android:textSize="@dimen/text_size_20"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
				app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard" />


			<TextView
				android:id="@+id/tvMovieDetailsAgeRestriction"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_40"
				android:layout_marginEnd="@dimen/margin_20"
				android:background="@drawable/circle_border"
				android:elevation="@dimen/elevation_default"
				android:gravity="center"
				android:text="@string/age_restriction_18"
				android:textColor="@color/black"
				android:textSize="@dimen/text_size_14"
				app:layout_constraintEnd_toEndOf="@id/cvMovieDetailsCard"
				app:layout_constraintTop_toTopOf="@id/cvMovieDetailsCard" />

			<RatingBar
				android:id="@+id/rbMovieDetailsRating"
				style="@style/customRatingBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_8"
				android:elevation="@dimen/elevation_default"
				android:isIndicator="true"
				android:numStars="5"
				android:rating="4"
				app:layout_constraintStart_toStartOf="@id/tvMovieDetailsName"
				app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsName" />

			<TextView
				android:id="@+id/tvMovieDetailsAnnotation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginTop="@dimen/margin_20"
				android:layout_marginEnd="@dimen/margin_8"
				android:elevation="@dimen/elevation_default"
				android:text="@string/description_wrath_of_man"
				android:textColor="@color/black"
				android:textSize="@dimen/text_size_14"
				android:textStyle="normal"
				app:layout_constraintEnd_toEndOf="@id/cvMovieDetailsCard"
				app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
				app:layout_constraintTop_toBottomOf="@id/rbMovieDetailsRating" />

			<TextView
				android:id="@+id/tvMovieDetailsActorsTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_20"
				android:layout_marginTop="@dimen/margin_35"
				android:elevation="@dimen/elevation_default"
				android:text="@string/title_actors"
				android:textColor="@color/black"
				android:textSize="@dimen/text_size_16"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
				app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsAnnotation" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rvActors"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:clipToPadding="false"
				android:elevation="@dimen/elevation_default"
				android:gravity="center_horizontal"
				android:paddingStart="@dimen/margin_20"
				android:paddingEnd="@dimen/margin_20"
				android:scrollbars="none"
				app:layout_constraintEnd_toEndOf="@id/cvMovieDetailsCard"
				app:layout_constraintStart_toStartOf="@id/cvMovieDetailsCard"
				app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsActorsTitle"
				tools:listitem="@layout/item_actor" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<include
		android:id="@+id/movieDetailsBottomNavigationView"
		layout="@layout/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>
